--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Pixel Design</title>
+        <title>Pixel Designn</title>
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
